--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
@@ -18,6 +19,7 @@
     "cors": "^2.8.5",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "prisma": "^5.15.1",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.7.5",
