--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
